[tool.poetry]
name = "word-embedding"
version = "0.1.0"
description = ""
authors = ["tjlin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gensim = "4.2.0"
jieba = "0.39"
matplotlib = "3.8.1"
scikit-learn = "1.3.2"
requests = "2.31.0"
tqdm = "^4.66.1"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
